--- a/ios/kashmir_book_depot/Info.plist
+++ b/ios/kashmir_book_depot/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Kashmir</string>
+	<string>Kashmir_Book_Depot</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
